Add /healthcheck endpoint
Add example Kubernetes manifests

Update README
